--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Asset/rumah/TopDownHouse_FloorsAndWalls.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/")
+dock_filesystem_selected_paths=PackedStringArray("res://Asset/toko/rak miring fixed .png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/toko/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,10 +30,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://NPC_bocahSD.tscn", "res://NPC_bgWIndah.tscn")
 current_scene="res://toko.tscn"
-center_split_offset=-267
+center_split_offset=-241
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=13
 
 [EditorWindow]
 
