--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Asset/character/idle.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/toko/", "res://Asset/character/", "res://Asset/character/raka/", "res://Asset/barang jualan/")
+dock_filesystem_selected_paths=PackedStringArray("res://Asset/rumah/TopDownHouse_FloorsAndWalls.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/", "res://Asset/character/raka/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=268
+dock_hsplit_2=172
 dock_hsplit_3=-268
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,31 +28,32 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://NPC_bocahSD.tscn", "res://NPC_bgWIndah.tscn")
-current_scene="res://NPC_Laras.tscn"
-center_split_offset=-343
+open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
+current_scene="res://testPath.tscn"
+center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
 position=Vector2i(0, 23)
-size=Vector2i(1152, 648)
+size=Vector2i(768, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://player.gd"]
+open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://player.gd"]
 selected_script="res://laras.gd"
 open_help=["Input", "Node2D"]
-script_split_offset=150
+script_split_offset=78
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.3000001
 
 [GameView]
 
-floating_window_rect=Rect2i(102, 28, 1162, 685)
+floating_window_rect=Rect2i(102, 31, 1162, 685)
 floating_window_screen=0
 
 [ShaderEditor]
@@ -64,9 +65,9 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
+log_filter_0=false
+log_filter_2=false
+log_filter_1=false
 log_filter_3=true
 log_filter_4=false
 collapse=false
