add lib and testing path

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,17 +9,17 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Asset/rumah/TopDownHouse_FloorsAndWalls.png")
+dock_filesystem_selected_paths=PackedStringArray("res://NPC_Laras.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/", "res://Asset/character/raka/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=251
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=172
+dock_hsplit_2=484
 dock_hsplit_3=-268
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
-current_scene="res://testPath.tscn"
+current_scene="res://toko.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ size=Vector2i(768, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://player.gd"]
+open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://npc_laras.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://player.gd"]
 selected_script="res://laras.gd"
 open_help=["Input", "Node2D"]
 script_split_offset=78
@@ -53,7 +53,7 @@ zoom_factor=1.3000001
 
 [GameView]
 
-floating_window_rect=Rect2i(102, 31, 1162, 685)
+floating_window_rect=Rect2i(102, 28, 1162, 685)
 floating_window_screen=0
 
 [ShaderEditor]
