--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,17 @@
-list=[]
+list=[{
+"base": &"RefCounted",
+"class": &"DialogueEngine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/rubonnek.dialogue_engine/runtime/dialogue_engine.gd"
+}, {
+"base": &"RefCounted",
+"class": &"DialogueEntry",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/rubonnek.dialogue_engine/runtime/dialogue_entry.gd"
+}]
