--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=251
+dock_split_2=-17
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=484
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn")
 current_scene="res://toko.tscn"
-center_split_offset=-197
+center_split_offset=-302
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ size=Vector2i(768, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://npc_laras.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://player.gd"]
+open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://npc_laras.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://path_npc.gd", "res://player.gd"]
 selected_script="res://laras.gd"
 open_help=["Input", "Node2D"]
 script_split_offset=78
