Refactor NPC and scene configurations; update paths, adjust properties, and enhance NPC movement logic

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -47,5 +47,5 @@ Sprite2D:scale=true
 
 [debug_options]
 
-run_debug_collisions=false
-run_debug_paths=false
+run_debug_collisions=true
+run_debug_paths=true
