--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,28 +28,28 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
 current_scene="res://toko.tscn"
-center_split_offset=-302
+center_split_offset=-214
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 23)
-size=Vector2i(768, 736)
+mode="windowed"
+position=Vector2i(531, 31)
+size=Vector2i(834, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://npc_laras.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://path_npc.gd", "res://player.gd"]
+open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://path_npc.gd", "res://player.gd"]
 selected_script="res://laras.gd"
 open_help=["Input", "Node2D"]
 script_split_offset=78
 list_split_offset=0
-zoom_factor=1.3000001
+zoom_factor=1.2
 
 [GameView]
 
