udah gacor dikit cuy npcnya

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://NPC_Laras.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/", "res://Asset/character/raka/")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/rubonnek.dialogue_engine/debugger/base_dialogue_entry_graph_node.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/", "res://Asset/character/raka/", "res://addons/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/debugger/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,31 +30,30 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
 current_scene="res://toko.tscn"
-center_split_offset=-214
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+center_split_offset=-228
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=0
-mode="windowed"
-position=Vector2i(597, 31)
+screen=1
+mode="maximized"
+position=Vector2i(1366, 23)
 size=Vector2i(768, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://path_follow_2d.gd", "res://path_npc.gd", "res://player.gd", "res://stop_point.gd"]
-selected_script="res://laras.gd"
-open_help=["Input", "Node2D"]
+open_scripts=["res://door.gd", "res://laras.gd", "res://npc_controller.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://path_npc.gd", "res://player.gd", "res://stop_point.gd"]
+selected_script="res://npc_controller.gd"
+open_help=["Input", "Node", "Node2D"]
 script_split_offset=226
 list_split_offset=0
 zoom_factor=1.2
 
 [GameView]
 
-floating_window_rect=Rect2i(102, 28, 1162, 685)
-floating_window_screen=0
+floating_window_rect=Rect2i(1745, 184, 1162, 685)
+floating_window_screen=1
 
 [ShaderEditor]
 
