--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,7 +3,7 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
@@ -13,108 +13,6 @@ state={
 "selection_from_line": 4,
 "selection_to_column": 28,
 "selection_to_line": 4,
-"syntax_highlighter": "GDScript"
-}
-
-[res://door.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 51,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 30,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://npc_ibu_pink.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 12,
-"syntax_highlighter": "GDScript"
-}
-
-[res://laras.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 16,
-"scroll_position": 18.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://path_2d.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://npc_laras.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://path_follow_2d.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://path_npc.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -132,7 +30,53 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://npc_controller.gd]
+[res://addons/rubonnek.dialogue_engine/debugger/dialogue_engine_viewer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/rubonnek.dialogue_engine/runtime/dialogue_engine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 23,
+"selection_to_column": 0,
+"selection_to_line": 24,
+"syntax_highlighter": "GDScript"
+}
+
+[res://property/door.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 44,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 30,
+"scroll_position": 8.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/npc_controller.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -141,7 +85,105 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
-"scroll_position": 15.0,
+"scroll_position": 157.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://npc/npc_ibu_pink.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/npc_laras.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/path_2d.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/path_follow_2d.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/path_npc.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://npc/laras.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://README.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
 }
