--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/rubonnek.dialogue_engine/debugger/base_dialogue_entry_graph_node.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/rumah/", "res://Asset/character/raka/", "res://addons/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_filesystem_selected_paths=PackedStringArray("res://README.md")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=-17
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=484
+dock_hsplit_2=209
 dock_hsplit_3=-268
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,23 +28,23 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://NPC_Laras.tscn", "res://NPC_PakBeni.tscn", "res://NPC_IbuPink.tscn", "res://testPath.tscn")
-current_scene="res://toko.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn")
+current_scene="res://property/door.tscn"
 center_split_offset=-228
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(1366, 23)
+position=Vector2i(0, 23)
 size=Vector2i(768, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://door.gd", "res://laras.gd", "res://npc_controller.gd", "res://npc_ibu_pink.gd", "res://path_2d.gd", "res://path_npc.gd", "res://player.gd", "res://stop_point.gd"]
-selected_script="res://npc_controller.gd"
+open_scripts=["res://property/door.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
+selected_script="res://README.md"
 open_help=["Input", "Node", "Node2D"]
 script_split_offset=226
 list_split_offset=0
