--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://rumah.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Asset/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://npc/", "res://dialogue/", "res://Asset/", "res://Asset/UI real/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,27 +29,27 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
-current_scene="res://scene_1.tscn"
+current_scene="res://property/door.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=1
-mode="maximized"
-position=Vector2i(1366, 23)
-size=Vector2i(768, 736)
+mode="windowed"
+position=Vector2i(1628, 116)
+size=Vector2i(1156, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://property/door.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
+open_scripts=["res://property/door.gd", "res://npc/interactLaras.gd", "res://keRumah.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/PakBeni.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
 selected_script="res://player.gd"
 open_help=["Input", "Node", "Node2D"]
 script_split_offset=226
 list_split_offset=0
-zoom_factor=1.2
+zoom_factor=1.0
 
 [GameView]
 
@@ -65,10 +65,10 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=false
-log_filter_3=true
-log_filter_4=false
+log_filter_3=false
+log_filter_4=true
 collapse=false
 show_search=true
