--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://na8yo7rkcvy5", "uid://di3psp00bdknx", "uid://cejqyn5tdygue")
+PackedScene=PackedStringArray("uid://ch0txgx1ckrlc", "uid://na8yo7rkcvy5", "uid://di3psp00bdknx", "uid://cejqyn5tdygue")
