--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,16 +2,16 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://rumah.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://npc/", "res://dialogue/", "res://Asset/", "res://Asset/UI real/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
-dock_node_current_tab=0
+dock_filesystem_selected_paths=PackedStringArray("res://Asset/toko/furniture7_toko.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://npc/", "res://dialogue/", "res://Asset/", "res://Asset/UI real/", "res://Asset/toko/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -29,17 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
-current_scene="res://property/door.tscn"
+current_scene="res://toko.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [EditorWindow]
 
 screen=1
 mode="windowed"
-position=Vector2i(1628, 116)
+position=Vector2i(1939, 31)
 size=Vector2i(1156, 736)
 
 [ScriptEditor]
@@ -49,7 +48,7 @@ selected_script="res://player.gd"
 open_help=["Input", "Node", "Node2D"]
 script_split_offset=226
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.2484125
 
 [GameView]
 
@@ -67,8 +66,8 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=false
-log_filter_3=false
+log_filter_1=true
+log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
