--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Asset/toko/furniture7_toko.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://npc/", "res://dialogue/", "res://Asset/", "res://Asset/UI real/", "res://Asset/toko/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_filesystem_selected_paths=PackedStringArray("res://dialogue/scene1.dialogue")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://dialogue/", "res://Asset/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,19 +31,20 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
 current_scene="res://toko.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=5
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=1
-mode="windowed"
-position=Vector2i(1939, 31)
+mode="maximized"
+position=Vector2i(1366, 23)
 size=Vector2i(1156, 736)
 
 [ScriptEditor]
 
-open_scripts=["res://property/door.gd", "res://npc/interactLaras.gd", "res://keRumah.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/PakBeni.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
+open_scripts=["res://addons/dialogue_manager/dialogue_manager.gd", "res://property/door.gd", "res://npc/interactLaras.gd", "res://keRumah.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/PakBeni.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
 selected_script="res://player.gd"
 open_help=["Input", "Node", "Node2D"]
 script_split_offset=226
