--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,18 +29,18 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
-current_scene="res://npc/NPC_Laras.tscn"
+current_scene="res://npc/NPC_PakBeni.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=5
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=1
-mode="maximized"
-position=Vector2i(1366, 23)
-size=Vector2i(1156, 736)
+mode="windowed"
+position=Vector2i(1429, 118)
+size=Vector2i(1213, 810)
 
 [ScriptEditor]
 
