--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://dialogue/scene1.dialogue")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://dialogue/", "res://Asset/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_filesystem_selected_paths=PackedStringArray("res://music/soundEffect/door_open.wav")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://property/", "res://music/", "res://music/soundEffect/", "res://Asset/", "res://Asset/UI real/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
-current_scene="res://npc/NPC_PakBeni.tscn"
+current_scene="res://toko.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
@@ -37,10 +37,10 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
-mode="windowed"
-position=Vector2i(1429, 118)
-size=Vector2i(1213, 810)
+screen=0
+mode="maximized"
+position=Vector2i(0, 23)
+size=Vector2i(1213, 749)
 
 [ScriptEditor]
 
@@ -53,8 +53,8 @@ zoom_factor=1.2484125
 
 [GameView]
 
-floating_window_rect=Rect2i(1745, 184, 1162, 685)
-floating_window_screen=1
+floating_window_rect=Rect2i(102, 28, 1162, 685)
+floating_window_screen=0
 
 [ShaderEditor]
 
