--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://music/soundEffect/door_open.wav")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://property/", "res://music/", "res://music/soundEffect/", "res://Asset/", "res://Asset/UI real/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
-dock_node_current_tab=1
+dock_filesystem_selected_paths=PackedStringArray("res://README.md")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://property/", "res://music/soundEffect/", "res://Asset/character/raka/", "res://addons/rubonnek.dialogue_engine/", "res://addons/rubonnek.dialogue_engine/runtime/", "res://addons/rubonnek.dialogue_engine/debugger/")
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=-17
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=208
+dock_hsplit_2=169
 dock_hsplit_3=-268
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://property/door.tscn", "res://rumah.tscn", "res://toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://testPath.tscn", "res://scene_1.tscn")
-current_scene="res://toko.tscn"
+open_scenes=PackedStringArray("res://scene/Player.tscn", "res://property/door.tscn", "res://scene/rumah.tscn", "res://scene/toko.tscn", "res://npc/NPC_Laras.tscn", "res://npc/NPC_PakBeni.tscn", "res://npc/NPC_IbuPink.tscn", "res://scene/testPath.tscn", "res://scene/scene_1.tscn", "res://scene/main_menu.tscn", "res://scene/main_ui.tscn", "res://scene/main.tscn")
+current_scene="res://scene/main.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
@@ -44,10 +44,10 @@ size=Vector2i(1213, 749)
 
 [ScriptEditor]
 
-open_scripts=["res://addons/dialogue_manager/dialogue_manager.gd", "res://property/door.gd", "res://npc/interactLaras.gd", "res://keRumah.gd", "res://npc/laras.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/PakBeni.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://player.gd", "res://README.md", "res://stop_point.gd"]
-selected_script="res://npc/laras.gd"
+open_scripts=["res://addons/dialogue_manager/dialogue_manager.gd", "res://property/door.gd", "res://npc/interactLaras.gd", "res://script/keRumah.gd", "res://npc/laras.gd", "res://script/main.gd", "res://script/main_menu.gd", "res://scene/main_ui.gd", "res://npc/npc_controller.gd", "res://npc/npc_ibu_pink.gd", "res://npc/PakBeni.gd", "res://npc/path_2d.gd", "res://npc/path_npc.gd", "res://script/player.gd", "res://README.md", "res://script/stop_point.gd"]
+selected_script="res://scene/main_ui.gd"
 open_help=["Input", "Node", "Node2D"]
-script_split_offset=75
+script_split_offset=226
 list_split_offset=0
 zoom_factor=1.2484125
 
@@ -65,9 +65,9 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
+log_filter_0=false
+log_filter_2=false
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
